--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-loader": "^7.1.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
