--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "author": "David Buchan-Swanson <david.buchanswanson+npm@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack-dev-server"
   },
   "devDependencies": {
