--- a/server/config/secrets.yml
+++ b/server/config/secrets.yml
@@ -18,7 +18,7 @@
 # Environmental secrets are only available for that specific environment.
 
 default: &default
-  facebook_oauth_callback_url: http://localhost:8080
+  facebook_oauth_callback_url: http://localhost:8080/
   facebook_app_id: <%= ENV["DEV_FACEBOOK_APP_ID"] %>
   facebook_app_secret: <%= ENV["DEV_FACEBOOK_APP_SECRET"] %>
 
@@ -38,6 +38,6 @@ test:
 production:
   <<: *default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  facebook_oauth_callback_url: https://ghettopool.party
+  facebook_oauth_callback_url: https://ghettopool.party/
   facebook_app_id: <%= ENV["FACEBOOK_APP_ID"] %>
   facebook_app_secret: <%= ENV["FACEBOOK_APP_SECRET"] %>
