--- a/server/Gemfile
+++ b/server/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 gem 'rails', '~> 5.1.3'
 # Use postgresql as the database for Active Record
 gem 'pg', '~> 0.18'
+gem 'activerecord-postgres-earthdistance'
 # Use Puma as the app server
 gem 'puma', '~> 3.7'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
