--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "dotenv": "^4.0.0",
+    "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
