--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^7.1.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "next",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^3.7.2",
