--- a/server/Gemfile
+++ b/server/Gemfile
@@ -15,6 +15,7 @@ gem 'puma', '~> 3.7'
 gem 'koala'
 gem 'dotenv-rails'
 gem 'rack-cors', require: 'rack/cors'
+gem 'awesome_print'
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
