--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-loader": "^7.1.2",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.71.5"
   }
 }
