Polish trip details

--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-hot-loader": "next",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.71.5"
