--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-loader": "^7.1.2",
+    "google-map-react": "^0.24.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.6.1",
